RESOLVED FIXED165663
Moved OrdinalNumber into its own file
https://bugs.webkit.org/show_bug.cgi?id=165663
Summary Moved OrdinalNumber into its own file
Geoffrey Garen
Reported 2016-12-09 10:48:57 PST
Moved OrdinalNumber into its own file
Attachments
Patch (12.02 KB, patch)
2016-12-09 10:51 PST, Geoffrey Garen
saam: review+
Geoffrey Garen
Comment 1 2016-12-09 10:51:03 PST
WebKit Commit Bot
Comment 2 2016-12-09 10:52:25 PST
Attachment 296661 [details] did not pass style-queue: ERROR: Source/WTF/wtf/text/OrdinalNumber.h:36: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] ERROR: Source/WTF/wtf/text/OrdinalNumber.h:48: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 2 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2016-12-09 11:23:13 PST
Joseph Pecoraro
Comment 4 2016-12-09 11:27:25 PST
Comment on attachment 296661 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=296661&action=review > Source/WTF/WTF.xcodeproj/project.pbxproj:93 > + 14E785E81DFB330100209BD1 /* OrdinalNumber.h in Headers */ = {isa = PBXBuildFile; fileRef = 14E785E71DFB330100209BD1 /* OrdinalNumber.h */; settings = {ATTRIBUTES = (Private, ); }; }; What does it mean for this to be a Private? I notice no other files have that attribute, including TextPosition.h.
Geoffrey Garen
Comment 5 2016-12-09 12:15:16 PST
That's how Xcode usually marks a header to indicate that other frameworks can #include it. The alternative, "Project", means only things in the WTF project can #include the header. I'm surprised that TextPosition didn't need this. Not sure what's going on there.
Note You need to log in before you can comment on or make changes to this bug.